--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,7 +248,8 @@ code {
 }
 
 #logo img {
-    max-width: 290px;
+    max-width: 250px;
+    padding-top: 4px;
 }
 
 /*Main Menu*/
@@ -256,7 +257,6 @@ ul#mainmenu {
     top: 50%;
     right: 0;
     margin: -30px 0 0 0;
-    padding: 0 50px 0 0;
     position: absolute;
 }
 
@@ -1938,7 +1938,7 @@ ul#flickrfeed li img:hover, ul#sidebarflickr li img:hover {
 
     ul#mainmenu > li > a {
         height: 18px;
-        padding: 21px 18px;
+        padding: 21px 26px;
     }
 
     .mobile_link {
